# Karpatheon

./: .gitignore  README.md  docker-compose.yml  infra setup.md  infra_setup.sh  neo4j_setup.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  style.css  tailwind.config.js
Karpatheon-frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
Karpatheon-frontend/app/: globals.css  layout.tsx  page.tsx
Karpatheon-frontend/components/: app-header.tsx  assistant-chat.tsx  assistant-header.tsx  assistant-sidebar.tsx  discovery-interface.tsx  knowledge-algorithm.tsx  knowledge-graph-canvas.tsx  knowledge-graph-header.tsx  knowledge-graph-sidebar.tsx  notes-editor.tsx  notes-header.tsx  notes-list.tsx  personality-header.tsx  personality-insights.tsx  personality-notes.tsx  personality-profile.tsx  personality-traits-sidebar.tsx  recommendations-grid.tsx  recommendations-header.tsx  recommendations-settings.tsx  (+12 more)
backend/: .dockerignore  .env.example  Dockerfile  backend.sh  pyproject.toml  schema.sql  test_notes_direct.py
backend/app/: main.py
backend/app/api/: chat.py  discovery.py  graph.py  ingestion.py  note.py  router.py  search.py
backend/app/db/: clients.py
backend/app/schemas/: base.py  discovery.py  note.py
backend/app/services/: discovery_service.py  embedding_factory.py  note.py  search_service.py
backend/app/tests/: test_chat.py  test_discovery.py  test_graph.py  test_ingestion.py  test_search.py
constellation-mvp/: package-lock.json  package.json
infrastructure/: docker-compose.yml
src/: content.tsx
(+22 files in other folders)
