[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "neo4j>=6.0.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "supabase>=2.24.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
